--- a/WebApplication800000/Views/Home/Index.cshtml
+++ b/WebApplication800000/Views/Home/Index.cshtml
@@ -69,66 +69,7 @@
                 </div>
             </div>
 
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <div class="single-slide">
-                        <div class="slide-bg slide-one"></div>
-                        <div class="slide-text-wrapper">
-                            <div class="slide-text">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6 col-md-offset-6">
-                                            <div class="slide-content">
-                                                <h2>Bouw je eigen PC!</h2>
-                                                <p>Bouw nu je eigen PC gemakkelijk met de PC builder!</p>
-                                                <a href="" class="readmore">Learn more</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single-slide">
-                        <div class="slide-bg slide-two"></div>
-                        <div class="slide-text-wrapper">
-                            <div class="slide-text">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6 col-md-offset-6">
-                                            <div class="slide-content">
-                                                <h2>Laagste prijzen</h2>
-                                                <p>Bij Alterhate hanteren we altijd de laagste prijzen en zeker lager dan Alternate ;)</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="single-slide">
-                        <div class="slide-bg slide-three"></div>
-                        <div class="slide-text-wrapper">
-                            <div class="slide-text">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6 col-md-offset-6">
-                                            <div class="slide-content">
-                                                <h2>Klantenservice</h2>
-                                                <p>Bij Alterhate is klantenservice heel belangrijke want klanten adviseren is onze speciliteit!</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+
 
         </div>
     </div> <!-- End slider area -->
@@ -165,79 +106,7 @@
         </div>
     </div> <!-- End promo area -->
 
-    <div class="maincontent-area">
-        <div class="zigzag-bottom"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="latest-product">
-                        <h2 class="section-title">Latest Products</h2>
-                        <div class="product-carousel">
-                            <div class="single-product">
-                                <div class="product-f-image">
-                                    <img src="~/img/product-1.jpg" alt="">
-                                    <div class="product-hover">
-                                        <a href="#" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Voeg toe aan winkelmandje</a>
-                                        <a href="#" class="view-details-link"><i class="fa fa-link"></i> Zie de details</a>
-                                    </div>
-                                </div>
 
-                                <h2><a href="single-product.html">Sony Smart TV - 2015</a></h2>
-
-                                <div class="product-carousel-price">
-                                    <ins>$700.00</ins> <del>$800.00</del>
-                                </div>
-                            </div>
-                            <div class="single-product">
-                                <div class="product-f-image">
-                                    <img src="~/img/product-2.jpg" alt="">
-                                    <div class="product-hover">
-                                        <a href="#" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Voeg toe aan winkelmandje</a>
-                                        <a href="#" class="view-details-link"><i class="fa fa-link"></i> Zie de details</a>
-                                    </div>
-                                </div>
-
-                                <h2><a href="single-product.html">Apple new mac book 2016 March :P</a></h2>
-                                <div class="product-carousel-price">
-                                    <ins>$899.00</ins> <del>$999.00</del>
-                                </div>
-                            </div>
-                            <div class="single-product">
-                                <div class="product-f-image">
-                                    <img src="~/img/product-3.jpg" alt="">
-                                    <div class="product-hover">
-                                        <a href="#" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Voeg toe aan winkelmandje</a>
-                                        <a href="#" class="view-details-link"><i class="fa fa-link"></i> Zie de details</a>
-                                    </div>
-                                </div>
-
-                                <h2><a href="single-product.html">Apple new iPhone 6</a></h2>
-
-                                <div class="product-carousel-price">
-                                    <ins>$400.00</ins> <del>$425.00</del>
-                                </div>
-                            </div>
-                            <div class="single-product">
-                                <div class="product-f-image">
-                                    <img src="~/img/product-4.jpg" alt="">
-                                    <div class="product-hover">
-                                        <a href="#" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Voeg toe aan winkelmandje</a>
-                                        <a href="#" class="view-details-link"><i class="fa fa-link"></i> Zie de details</a>
-                                    </div>
-                                </div>
-
-                                <h2><a href="single-product.html">Sony Playstation Microsoft</a></h2>
-
-                                <div class="product-carousel-price">
-                                    <ins>$200.00</ins> <del>$225.00</del>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> <!-- End main content area -->
 
     <div class="footer-top-area">
         <div class="zigzag-bottom"></div>
@@ -258,11 +127,11 @@
                     <div class="footer-menu">
                         <h2 class="footer-wid-title">Gebruiker Navigatie</h2>
                         <ul>
-                            <li><a href="#">Mijn account</a></li>
-                            <li><a href="#">Bestelgeschiedenis</a></li>
-                            <li><a href="#">Wishlist</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Startpagina</a></li>
+                            <li><a href="http://localhost:50104/Customers/Login">Mijn account</a></li>
+                            <li><a href="http://localhost:50104/Customers/OrderHistory">Bestelgeschiedenis</a></li>
+                            <li><a href="http://localhost:50104/Product/Wishlist">Wishlist</a></li>
+                            <li><a href="http://localhost:50104/Home/Contact">Contact</a></li>
+                            <li><a href="http://localhost:50104">Startpagina</a></li>
                         </ul>
                     </div>
                 </div>
